--- a/06-scripts.qmd
+++ b/06-scripts.qmd
@@ -37,15 +37,15 @@ In its most basic form, a shell script is simply a text file containing a list o
 Thu 12 Nov 14:21:16 GMT 2020
 [USERNAME]@aabn:~$ echo hello
 hello
-[USERNAME]@aabn:~$ ls /home2/swebb/training/Intro_to_Linux/genomes/mouse/
+[USERNAME]@aabn:~$ ls /data/swebb/training/Intro_to_Linux/genomes/mouse/
 GRCm38  mm10  mm9  UCSC
 [USERNAME]@aabn:~$ echo date > my_script.sh
 [USERNAME]@aabn:~$ echo 'echo hello' >> my_script.sh
-[USERNAME]@aabn:~$ echo 'ls /home2/swebb/training/Intro_to_Linux/genomes/mouse/' >> my_script.sh
+[USERNAME]@aabn:~$ echo 'ls /data/swebb/training/Intro_to_Linux/genomes/mouse/' >> my_script.sh
 [USERNAME]@aabn:~$ cat my_script.sh
 date
 echo hello
-ls /home2/swebb/training/Intro_to_Linux/genomes/mouse/
+ls /data/swebb/training/Intro_to_Linux/genomes/mouse/
 [USERNAME]@aabn:~$ bash my_script.sh
 Thu 12 Nov 14:26:29 GMT 2020
 hello
@@ -66,7 +66,7 @@ Once these steps have been followed, it will be possible to execute the script u
 #!/bin/bash
 date
 echo hello
-ls /home2/swebb/training/Intro_to_Linux/genomes/mouse/
+ls /data/swebb/training/Intro_to_Linux/genomes/mouse/
 [USERNAME]@aabn:~$ ls -l ./my_script.sh
 -rwxrwxr-x 1 [USERNAME] [USERNAME] 0 Nov 13 21:40 my_script.sh
 [USERNAME]@aabn:~$ ./my_script.sh
@@ -105,7 +105,9 @@ You can edit your scripts using a text editor such as *emacs* or *vim*.
 -   This section presents a bash script that replicates the case study performed in the previous section
 :::
 
-In the previous section we showed how to perform a simple analysis of some RNA-Seq data from scratch. In order turn this into a reproducible analysis workflow, it is necessary to put all of the commands that make up the analysis into a script.
+<br>
+
+In the previous section we showed how to perform a simple analysis of some RNA-Seq data from scratch. To turn this into a reproducible analysis workflow, it is necessary to put all of the commands that make up the analysis into a script.
 
 ### Creating a simple data analysis script
 
@@ -145,7 +147,7 @@ head -10 04_gene_overlap_counts/raw_yeast_overlap_data.gene_overlap_counts.bed
 cd ..
 ```
 
-We can see that this works by running the above file (which is saved on the server as '/home2/swebb/training/Intro_to_Linux/analysis_raw.sh'):
+We can see that this works by running the above file (which is saved on the server as '/data/swebb/training/Intro_to_Linux/analysis_raw.sh'):
 
 ```{bash eval=F}
 [USERNAME]@aabn:~/course$ ls
@@ -153,7 +155,7 @@ analysis  bioinformatics_on_the_command_line_files  bioinformatics_on_the_comman
 [USERNAME]@aabn:~/course$ mv analysis interactive_analysis
 [USERNAME]@aabn:~/course$ ls
 bioinformatics_on_the_command_line_files  bioinformatics_on_the_command_line_files.tar.gz  interactive_analysis
-[USERNAME]@aabn:~/course$ bash /home2/swebb/training/Intro_to_Linux/analysis_raw.sh
+[USERNAME]@aabn:~/course$ /data/swebb/training/Intro_to_Linux/analysis_raw.sh
 .
 └── 00_source_data
     └── raw_yeast_rnaseq_data.fastq -> ../../bioinformatics_on_the_command_line_files/raw_yeast_rnaseq_data.fastq
@@ -412,7 +414,7 @@ awk --version | head -1 >> run_report.txt
 echo 'Pipeline completed successfully.'
 ```
 
-Again, we can see that this works by running the above file (which is saved on the server as '/home2/swebb/training/Intor_to_Linux/analysis_improved.sh'):
+Again, we can see that this works by running the above file (which is saved on the server as '/data/swebb/training/Intor_to_Linux/analysis_improved.sh'):
 
 ```{bash eval=F}
 [USERNAME]@aabn:~/course$ ls
@@ -421,7 +423,7 @@ analysis  bioinformatics_on_the_command_line_files  bioinformatics_on_the_comman
 [USERNAME]@aabn:~/course$ ls
 analysis_raw                              bioinformatics_on_the_command_line_files.tar.gz
 bioinformatics_on_the_command_line_files  interactive_analysis
-[USERNAME]@aabn:~/course$ bash /home2/swebb/training/Intro_to_Linux/analysis_improved.sh
+[USERNAME]@aabn:~/course$ bash /data/swebb/training/Intro_to_Linux/analysis_improved.sh
 Creating STAR index...
 Nov 16 16:38:09 ..... started STAR run
 Nov 16 16:38:09 ... starting to generate Genome files
@@ -446,7 +448,7 @@ Creating genome coverage file...
 Computing gene overlap counts...
 Pipeline completed successfully.
 [USERNAME]@aabn:~/course$ cat analysis/run_report.txt
-/home2/swebb/training/Intor_to_Linux/analysis_improved.sh run completed successfully.
+/data/swebb/training/Intor_to_Linux/analysis_improved.sh run completed successfully.
 Mon 16 Nov 16:38:36 GMT 2020
 Software versions:
 STAR
@@ -459,24 +461,6 @@ awk
 GNU Awk 4.1.4, API: 1.1 (GNU MPFR 4.0.1, GNU MP 6.1.2)
 [USERNAME]@bifx-core2:~/course$ 
 ```
-
-::: challenge
-<h2><i class="fas fa-pencil-alt"></i> Challenge:</h2>
-
-What is the line `ls "$RAW_FASTQ" "$GENOME_FASTA" "$GENES_BED" > /dev/null` in the script for?
-
-<details>
-
-<summary>Solution</summary>
-
-::: solution
-<h2><i class="far fa-eye"></i> Solution:</h2>
-
-If the files referenced by *RAW_FASTQ*, *GENOME_FASTA*, and *GENES_BED* exist, the line does nothing, as the output of the command is redirected to `/dev/null` (which basically means that it is ignored). However, if any of the files don't exist this command will fail with an error message. Because we have included the line `set -eou pipefail` this will cause the script to stop running, which is what we want if one or more of the output files is missing.
-:::
-
-</details>
-:::
 
 ### Managing your scripts
 
